<resources>
    <string name="app_name">ParcelDeliveryDemo</string>
    <string name="title_home">Home</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_shipment">Shipment</string>
    <string name="title_profile">Profile</string>
    <string name="vehicle_image">Vehicle Image\n</string>
    <string name="header_title_calculate">Calculate</string>
    <string name="back_btn">back Button</string>
    <string name="shipment_details">Your delivery, #NEJ20089934122231 from Atlanta, is arriving today!</string>
    <string name="shipment_title">Arriving today!</string>
    <string name="_1400_usd">$1400 USD</string>
    <string name="sep_20_2023">• Sep 20,2023</string>
    <string name="checkout_info">This amount is estimated this will vary if you change your location or weight</string>
    <string name="back_to_home">Back to home</string>
    <string name="_1460_usd">$1460 USD</string>
    <string name="total_estimated_amount">Total Estimated Amount</string>
    <string name="your_location">Your location</string>
    <string name="wertheimer_illinois">Wertheimer, Illinois</string>
    <string name="enter_the_receipt_number">Enter the receipt number ...</string>
    <string name="tracking">Tracking</string>
    <string name="nej20089934122231">NEJ20089934122231</string>
    <string name="atlanta_5243">Atlanta, 5243</string>
    <string name="sender">Sender</string>
    <string name="time">Time</string>
    <string name="_2_day_3_days">2 day -3 days</string>
    <string name="receiver">Receiver</string>
    <string name="waiting_to_collect">Waiting to collect</string>
    <string name="status">Status</string>
    <string name="chicago_6342">Chicago, 6342</string>
    <string name="available_vehicles">Available Vehicles</string>
    <string name="shipment_number">Shipment Number</string>
    <string name="add_stop">+ Add Stop</string>
    <string name="destination">Destination</string>
    <string name="sender_location">Sender location</string>
    <string name="receiver_location">Receiver location</string>
    <string name="approx_weight">Approx Weight</string>
    <string name="packaging">Packaging</string>
    <string name="categories">Categories</string>
    <string name="documents">Documents</string>
    <string name="glass">Glass</string>
    <string name="liquid">Liquid</string>
    <string name="food">Food</string>
    <string name="electronic">Electronic</string>
    <string name="product">Product</string>
    <string name="others">Others</string>
    <string name="calculate">Calculate</string>
    <string name="shipment_history">Shipment history</string>
    <string name="shipments">Shipments</string>
    <string name="ocean_freight">Ocean freight</string>
    <string name="international">International</string>
    <string name="summer_linen_jacket">Summer linen jacket</string>
    <string name="barcelona_paris">Barcelona → Paris</string>
    <string name="in_progress">in-progress</string>
</resources>