<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dikascode.parceldeliverydemo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calculate"
        android:name="com.dikascode.parceldeliverydemo.ui.calculate.CalculateFragment"
        android:label="@string/title_calculate"
        tools:layout="@layout/fragment_calculate" />

    <fragment
        android:id="@+id/navigation_shipment"
        android:name="com.dikascode.parceldeliverydemo.ui.shipment.ShipmentFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_shipment" />
</navigation>