<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculate.CalculateFragment">

    <!-- Header Section -->
    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_background"
        android:paddingStart="@dimen/_16dp"
        android:paddingEnd="@dimen/_16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/header_title_calculate"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <!-- Destination Title -->
    <TextView
        android:id="@+id/destinationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/destination"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/destinationCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:padding="@dimen/_16dp"
        app:cardCornerRadius="@dimen/_16dp"
        app:cardElevation="@dimen/_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/destinationTitle">

        <LinearLayout
            android:id="@+id/routeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16dp">

            <!-- Sender Location LinearLayout -->
            <LinearLayout
                android:id="@+id/senderLocationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@drawable/rounded_corner_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">

                <ImageView
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="@dimen/_24dp"
                    android:src="@drawable/download_img" />

                <View
                    android:layout_width="@dimen/_1dp"
                    android:layout_height="@dimen/_24dp"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginRight="@dimen/_5dp"
                    android:background="@color/grey" />

                <EditText
                    android:id="@+id/senderLocationEditText"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/sender_location"
                    android:inputType="text"
                    android:padding="@dimen/_8dp"
                    android:textColorHint="@color/grey" />
            </LinearLayout>

            <!-- Receiver Location LinearLayout -->
            <LinearLayout
                android:id="@+id/receiverLocationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@drawable/rounded_corner_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">

                <ImageView
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="@dimen/_24dp"
                    android:src="@drawable/upload_img" />

                <View
                    android:layout_width="@dimen/_1dp"
                    android:layout_height="@dimen/_24dp"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginRight="@dimen/_5dp"
                    android:background="@color/grey" />

                <EditText
                    android:id="@+id/receiverLocationEditText"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/receiver_location"
                    android:inputType="text"
                    android:padding="@dimen/_8dp"
                    android:textColorHint="@color/grey" />
            </LinearLayout>

            <!-- Approx Weight LinearLayout -->
            <LinearLayout
                android:id="@+id/approxWeightLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@drawable/rounded_corner_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">

                <ImageView
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="@dimen/_24dp"
                    android:src="@drawable/hour_glass_img" />

                <View
                    android:layout_width="@dimen/_1dp"
                    android:layout_height="@dimen/_24dp"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginRight="@dimen/_5dp"
                    android:background="@color/grey" />

                <EditText
                    android:id="@+id/approxWeightEditText"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/approx_weight"
                    android:inputType="text"
                    android:padding="@dimen/_8dp"
                    android:textColorHint="@color/grey" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- Packaging Section -->
    <TextView
        android:id="@+id/packagingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/packaging"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/destinationCard" />

    <!-- Package Option Spinner/Dropdown -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/packageOptionInputLayout"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_4dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:background="@drawable/rounded_corner_background"
        android:elevation="@dimen/_2dp"
        android:padding="@dimen/_8dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/grey"
        app:endIconMode="dropdown_menu"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/packagingTitle">

        <AutoCompleteTextView
            android:id="@+id/packageAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/grey_box"
            android:drawablePadding="@dimen/_8dp"
            android:hint="Box"
            android:inputType="none"
            android:paddingStart="@dimen/_12dp"
            android:paddingEnd="@dimen/_12dp"
            android:popupBackground="@color/white"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            app:boxCornerRadiusBottomEnd="@dimen/_8dp"
            app:boxCornerRadiusBottomStart="@dimen/_8dp"
            app:boxCornerRadiusTopEnd="@dimen/_8dp"
            app:boxCornerRadiusTopStart="@dimen/_8dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Categories Section -->
    <TextView
        android:id="@+id/categoriesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/categories"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/packageOptionInputLayout" />

    <GridLayout
        android:id="@+id/gridLayoutCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4dp"
        android:columnCount="4"
        android:columnOrderPreserved="true"
        android:padding="@dimen/_4dp"
        android:rowCount="2"
        app:layout_constraintTop_toBottomOf="@id/categoriesTitle">

        <!-- Category Button for Documents -->
        <Button
            android:id="@+id/buttonDocuments"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/_4dp"
            android:padding="@dimen/_0dp"
            android:text="@string/documents"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sp" />

        <!-- Category Button for 'Glass' -->
        <Button
            android:id="@+id/buttonGlass"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/_4dp"
            android:padding="@dimen/_0dp"
            android:text="@string/glass"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sp" />

        <!-- Category Button for 'Liquid' -->
        <Button
            android:id="@+id/buttonLiquid"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/_4dp"
            android:padding="@dimen/_0dp"
            android:text="@string/liquid"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sp" />

        <!-- Category Button for 'Food' -->
        <Button
            android:id="@+id/buttonFood"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/_4dp"
            android:padding="@dimen/_0dp"
            android:text="@string/food"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sp" />

        <!-- Category Button for 'Electronic' -->
        <Button
            android:id="@+id/buttonElectronic"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/_4dp"
            android:padding="@dimen/_0dp"
            android:text="@string/electronic"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sp" />

        <!-- Category Button for 'Product' -->
        <Button
            android:id="@+id/buttonProduct"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/_4dp"
            android:padding="@dimen/_0dp"
            android:text="@string/product"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sp" />

        <!-- Category Button for 'Others' -->
        <Button
            android:id="@+id/buttonOther"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/_4dp"
            android:padding="@dimen/_0dp"
            android:text="@string/others"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sp" />
    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculateButton"
        style="@style/CustomButton"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@drawable/bg_calculate_button"
        android:padding="@dimen/_12dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayoutCategories" />


</androidx.constraintlayout.widget.ConstraintLayout>
