<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8dp"
    app:cardCornerRadius="@dimen/_8dp"
    app:cardElevation="@dimen/_4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp">

        <!-- Status Icon and Label -->
        <LinearLayout
            android:id="@+id/labelLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_status_grey_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_12dp"
            android:paddingTop="@dimen/_2dp"
            android:paddingEnd="@dimen/_12dp"
            android:paddingBottom="@dimen/_2dp">

            <ImageView
                android:id="@+id/statusIcon"
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:src="@drawable/outline_notification" />

            <TextView
                android:id="@+id/statusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_toEndOf="@id/statusIcon"
                android:text="@string/in_progress"
                android:textColor="@color/status_green"
                android:textStyle="bold" />

        </LinearLayout>


        <!-- Shipment Title -->
        <TextView
            android:id="@+id/shipmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:text="@string/shipment_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <!-- Shipment Details -->
        <TextView
            android:id="@+id/shipmentDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shipmentTitle"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_toStartOf="@+id/shipmentPackageImage"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/shipment_details"
            android:textSize="@dimen/_14sp" />

        <!-- Shipment Price and Date Container -->
        <LinearLayout
            android:id="@+id/priceDateContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shipmentDetails"
            android:layout_alignParentStart="true"
            android:gravity="bottom"
            android:orientation="horizontal">

            <!-- Shipment Price -->
            <TextView
                android:id="@+id/shipmentPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1400_usd"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />

            <!-- Shipment Date -->
            <TextView
                android:id="@+id/shipmentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:text="@string/sep_20_2023" />
        </LinearLayout>

        <!-- Package Image -->
        <ImageView
            android:id="@+id/shipmentPackageImage"
            android:layout_width="@dimen/_64dp"
            android:layout_height="@dimen/_64dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_profile_picture" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>

